--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/DoclikeMac/ocean_girl.jpg
+/DoclikeMac/ryza1.PNG
+/DoclikeMac/noise.png
