--- a/DoclikeMac/DoclikeMac.csproj
+++ b/DoclikeMac/DoclikeMac.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="noise.png" />
+    <PackageReference Include="FluentWpfChromes" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="ocean_girl.jpg" />
     <Resource Include="ryza1.PNG" />
   </ItemGroup>
