--- a/DoclikeMac/DoclikeMac.csproj
+++ b/DoclikeMac/DoclikeMac.csproj
@@ -18,4 +18,8 @@
     </COMReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
