コントロール追加

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,7 @@ healthchecksdb
 /DoclikeMac/ocean_girl.jpg
 /DoclikeMac/ryza1.PNG
 /DoclikeMac/noise.png
+/DoclikeMac/pattern4.png
+/DoclikeMac/pattern3.png
+/DoclikeMac/pattern2.png
+/DoclikeMac/pattern1.png
