--- a/DoclikeMac/DocklikeMac.csproj
+++ b/DoclikeMac/DocklikeMac.csproj
@@ -6,6 +6,13 @@
     <UseWPF>true</UseWPF>
     <UserSecretsId>7cc3c3be-b6d3-4625-8a30-b1c38353879e</UserSecretsId>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <StartupObject>DoclikeMac.App</StartupObject>
+    <AssemblyName>DocklikeMac</AssemblyName>
+    <RootNamespace>DocklikeMac</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
