--- a/DoclikeMac/DocklikeMac.csproj
+++ b/DoclikeMac/DocklikeMac.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.0.8" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+    <PackageReference Include="System.Drawing.Icons" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
