--- a/DoclikeMac/DocklikeMac.csproj
+++ b/DoclikeMac/DocklikeMac.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UserSecretsId>7cc3c3be-b6d3-4625-8a30-b1c38353879e</UserSecretsId>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
     <StartupObject>DoclikeMac.App</StartupObject>
     <AssemblyName>DocklikeMac</AssemblyName>
     <RootNamespace>DocklikeMac</RootNamespace>
+    <ApplicationIcon>pear.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <None Remove="close_btn.png" />
+    <None Remove="pear.ico" />
     <None Remove="Resources\TaskIcon.ico" />
   </ItemGroup>
 
@@ -54,6 +56,7 @@
 
   <ItemGroup>
     <Resource Include="close_btn.png" />
+    <Resource Include="pear.ico" />
     <Resource Include="Resources\TaskIcon.ico" />
   </ItemGroup>
 
